on-premises/k8s/zeppelin/overlays/pve/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zeppelin
  annotations:
    cert-manager.io/cluster-issuer: spnw-intermediate-ca1-issuer
    cert-manager.io/common-name: "zeppelin.vm.pvel.worldl.xpt"
    cert-manager.io/duration: "2160h" # 90 days
spec:
  ingressClassName: nginx
  rules:
    - host: pve-zeppelin.worldb.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zeppelin-server
                port:
                  number: 80
    - host: zeppelin.ing.vm.pve.worldl.xpt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zeppelin-server
                port:
                  number: 80
  tls:
    - hosts:
        - zeppelin.vm.pve.worldl.xpt
      secretName: zeppelin-tls
